Update to sqlite

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BooksDB;MultipleActiveResultSets=true"
+    "BookConnection": "Data Source =Test.sqlite"
   }
 }
