--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Data Source =BooksDb.sqlite"
+    "BookConnection": "Data Source = BooksDB.sqlite"
   }
 }
